name:               d12frosted-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable d12frosted-github-io
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , basic-prelude
                  , containers >= 0.5.6.2
                  , hakyll == 4.7.*
                  , pandoc >= 1.15.0.6
                  , pandoc-types >= 1.12.4.5
                  , time >= 1.5
                  , time-locale-compat >= 0.1.1
  ghc-options:      -threaded
  default-language: Haskell2010
